--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
     "git-commit-msg-linter": "^4.7.3",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "eslint-config-standard-with-typescript": "^34.0.0"
   }
 }
