--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "eslint-plugin-react": "^7.32.2",
     "git-commit-msg-linter": "^4.7.3",
     "jest": "^29.4.3",
+    "lint-staged": "^13.1.2",
+    "standard": "^17.0.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "eslint-config-standard-with-typescript": "^34.0.0"
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "husky": "^8.0.3"
   }
 }
